NetTiers ChangeLog
=====================================

Version 0.9.3, codename "Caribert"
-------------------------------------
04/19/2006
	- [NT-105] Updated Documentation manual at http://www.nettiers.com/nettiers2-manual-v1.aspx for netTiers 2.
04/07/2006
	- [NT-75] BUG: Syntax errors in EntityProviderBase, when doing custom stored procedures. Procedures.xml was failing, when containing invalid characters.
04/06/2006
	- [NT-73]Filter Exception Text has been changed to English to conform to the rest of the code.
04/03/2006
	- [NT-70] BUG: Corrected template Filter.cst IsOk Method that was failing when filtering tinyint and smallint 
03/28/2006 
	- [NT-61] BUG: EntityBase field state was causing collisions with generated columns named state.  Updated to currentEntityState.
	- [NT-62] BUG: Strip table names does not work properly
03/12/2006
	- BUG: [NT-19] SQL 2005 Schemas not interpreted correctly

03/11/2006
	- FIX: Missing Import reference to System.Text.RegularExpressions in Enum.cst
	- BUG: [NT-18] Bug in 'scripsql.xsl' if used in SQL Server 2005 with schema information

03/10/2006
	- FIX: [ 1400268 ] Enumerations containing invalid characters
	- FIX: [ 1399169 ] BLL and DAL Namespaces don't support dots
		- added GetCleanName2 function that does not remove periods.
	- FIX: [ 1443692 ] Misspelling in NetTiers.cst 
	- BUG: [ 1442474 ] Issue with '.' in database name
	- BUG: [ 1442447 ] Produces non-compileable code when columns contain accents

<<<<<<< CHANGELOG.TXT
01/31/2006
	- Fix of databinding bug (canceledit)

=======
12/12/2005
	- FIX: Made WebAdminOutputPath optional and added code to log message when GenerateWebAdmin is set to true and no path has been specified.

>>>>>>> 1.19
12/09/2005
	- BUG [ 1368498 ] Wrong references to Business Logic Layer
	- BUG [ 1295649 ] Find Function Causing Error
	- BUG [ 1368975 ] Bug in Find SQL procedure
	- BUG [ 1366379 ] View column name with space
	- BUG [ 1374466 ] (NetTiers) Stored procedure Fix

12/05/2005