@@ -2226,12 +2226,17 @@ namespace MoM.Templates
 			
 			for(int i=0; i<table.Columns.Count; i++) //  CommandResultSchema cmdResult in command.CommandResults)
 			{
-				if (command.CommandResults[0].Columns[i].Name != table.Columns[i].Name)
+				if (command.CommandResults[0].Columns[i].Name.ToLower() != table.Columns[i].Name.ToLower())
 				{
 					return false;
 				}
 				
-				if (command.CommandResults[0].Columns[i].NativeType != table.Columns[i].NativeType)
+				// manage the xml column type deparately
+				if ( table.Columns[i].NativeType == "xml" && (command.CommandResults[0].Columns[i].NativeType == "sql_variant" || command.CommandResults[0].Columns[i].NativeType == "ntext"))
+				{
+					continue;
+				}
+				else if (command.CommandResults[0].Columns[i].NativeType != table.Columns[i].NativeType )
 				{
 					return false;
 				}
