@@ -1,3 +1,6 @@
+04/24/2006
+	- [NT-113] Fixed bug where the CommonSqlCode.IsMatching() method is only checking a single column's NativeType and returning true if it matches.
+			   Also made the column name comparison case insensitive.
 04/21/2006
 	- NEW FEATURE: Added ability to sign your assemblies. New setting SignAssembly toggles signing. 
 	               Each proejct expects a snk file with the same name as your NameSpace.
