@@ -3,6 +3,9 @@ NetTiers ChangeLog
 
 Version 0.9.3, codename "Caribert"
 -------------------------------------
+04/24/2006
+	- [NT-113] Fixed bug where the CommonSqlCode.IsMatching() method is only checking a single column's NativeType and returning true if it matches.
+			   Also made the column name comparison case insensitive.
 04/19/2006
 	- [NT-105] Updated Documentation manual at http://www.nettiers.com/nettiers2-manual-v1.aspx for netTiers 2.
 04/07/2006
